--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,16 @@
         }
     ],
     "require": {
-        "intervention/image": "^2.5",
-        "laravel/framework": "^6.0",
+        "intervention/image": "^2.6",
+        "laravel/framework": "^7.0",
+        "laravel/ui": "^2.0",
         "propaganistas/laravel-phone": "^4.2"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "nunomaduro/collision": "^4.3",
+        "phpunit/phpunit": "^8.0"
     },
     "autoload": {
         "psr-4": {
