--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,15 @@
     ],
     "require": {
         "intervention/image": "^2.6",
-        "laravel/framework": "^7.0",
-        "laravel/ui": "^2.0",
-        "propaganistas/laravel-phone": "^4.2"
+        "laravel/framework": "^8.0",
+        "laravel/ui": "^3.0",
+        "propaganistas/laravel-phone": "^4.3"
     },
     "require-dev": {
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^4.3",
-        "phpunit/phpunit": "^8.0"
+        "fakerphp/faker": "^1.9.1",
+        "mockery/mockery": "^1.4.2",
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.3.3"
     },
     "autoload": {
         "psr-4": {
@@ -33,7 +33,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Tests\\": "tests/",
+            "Database\\Factories\\" : "database/factories/"
         }
     },
     "extra": {
